--- a/index.html
+++ b/index.html
@@ -93,14 +93,54 @@
                         </div>
                     </div>
                     <div class="projects-section__right-part">
-                        <span class="projects-names__item">Rostov-on-Don, Admiral</span>
-                        <span class="projects-names__item">Sochi Thieves</span>
-                        <span class="projects-names__item">Rostov-on-Don Patriotic</span>
-                        <!-- <ul class="projects-names">
-                            <li class="projects-names__item">Rostov-on-Don, Admiral</li>
-                            <li class="projects-names__item">Sochi Thieves</li>
-                            <li class="projects-names__item">Rostov-on-Don Patriotic</li>
-                        </ul> -->
+                        <div class="projects-names">
+                            <span class="projects-names__item">Rostov-on-Don, Admiral</span>
+                            <span class="projects-names__item">Sochi Thieves</span>
+                            <span class="projects-names__item">Rostov-on-Don Patriotic</span>
+                        </div>
+                        <div class="img-holder">
+                            <div class="img-holder__item">
+                                <img src="./img/rod_admiral.jpg">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="online-control-section">
+            <div class="container">
+                <div class="video-holder">
+                    <h3 class="video-holder__title">online control</h3>
+                    <img class="video-holder__camera" src="./img/camera.svg">
+                    <video class="video-holder__video" controls poster="./img/video_poster.jpg">
+                        <!-- <source  src="./video/Ремонт квартир по дизайн проекту.mp4" type="video/mp4"> -->
+                        <span>I'm sorry; your browser doesn't support HTML5 video.</span>
+                    </video>
+                </div>
+                <hr class="onlite-control__line">
+                <p class="onlite-control__text">
+                    At each facility, a camera is installed that broadcasts the progress of work on the clock. 
+                    At any time, you can go to our website and monitor the progress of work in your apartment. 
+                    You can watch the live broadcast from one of our facilities!<br>
+                    Leave a request below and you will receive a link to the broadcast.
+                </p>
+                <div class="user-form">
+                    <div class="user-form__item">
+                        <label class="user-form__label">Name</label>
+                        <input class="input" type="text" name="Name" placeholder="What is your name:">
+                    </div>
+                    <div class="user-form__item">
+                        <label class="user-form__label">Phone</label>
+                        <input class="input" type="text" name="Phone" placeholder="Your phone number:">
+                    </div>
+                    <button class="button button-submit" type="submit">SUBMIT</button>
+                    <div class="user-form__agreement">
+                        <label class="label">
+                            <input type="checkbox" class="checkbox">
+                            <span class="fake"></span>
+                            <span class="text">I agree to the processing of personal data.</span>
+                        </label>
                     </div>
                 </div>
             </div>
