WIP repair types section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,29 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="repair-types-section">
+                <h3 class="repair-types-section__title">TYPES OF REPAIR</h3>
+                <img class="repair-types-section__icon" src="./img/type_of_repair.svg">
+                <div class="repair-types">
+                    <div class="repair-types__item">
+                        <img src="./img/redecorating_type.jpg">
+                        <div class="repair-type-info">
+                            <h3>Redecorating</h3>
+                            <ul class="repair-type-info__list">
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="header-footer-prop">
         <div class="container">
