--- a/index.html
+++ b/index.html
@@ -163,6 +163,39 @@
                                 <li>Replacing sockets and switches</li>
                                 <li>Replacing doors</li>
                             </ul>
+                            <button class="button-repair-type">from 900 rub / m2</button>
+                        </div>
+                    </div>
+                    <div class="repair-types__item">
+                        <img src="./img/overhaul_type.jpg">
+                        <div class="repair-type-info">
+                            <h3>Overhaul</h3>
+                            <ul class="repair-type-info__list">
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                            <button class="button-repair-type">from 1800 rub / m2</button>
+                        </div>
+                    </div>
+                    <div class="repair-types__item">
+                        <img src="./img/designer_type.jpg">
+                        <div class="repair-type-info">
+                            <h3>Designer Repair</h3>
+                            <ul class="repair-type-info__list">
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                            <button class="button-repair-type">from 4000 rub / m2</button>
                         </div>
                     </div>
                 </div>
