WIP advantages section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
                     </div>
                 </div>
             </div>
+            <div class="our-advantages-section">
+                <div class="advantages-list">
+                    <div class="advantages-list__item">
+                        <div class="advantages-list__bullet">01</div>
+                        <p class="advantages-list__text">Our specialist will arrive for measurements per day <br>
+                        contact, or appoint a date convenient for you</p>
+                    </div>
+                    <div class="advantages-list__item">
+                        <div class="advantages-list__bullet">02</div>
+                        <p class="advantages-list__text">Free metering</p>
+                    </div>
+                    <div class="advantages-list__item">
+                        <div class="advantages-list__bullet">03</div>
+                        <p class="advantages-list__text">Free consultation</p>
+                    </div>
+                    <div class="advantages-list__item">
+                        <div class="advantages-list__bullet">04</div>
+                        <p class="advantages-list__text">Get a cost estimate and <br>
+                        the timing of your future repairs</p>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
     <footer class="header-footer-prop">
