WIP about us section

--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
                 
             </div>
         </div>
+        <div class="about-us-section">
+            <div class="transparent-layer">
+                <div class="container">
+                    <div class="about-us__map"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="header-footer-prop">
         <div class="container">
