WIP on our clients section

--- a/index.html
+++ b/index.html
@@ -118,24 +118,24 @@
                         <span>I'm sorry; your browser doesn't support HTML5 video.</span>
                     </video>
                 </div>
-                <hr class="onlite-control__line">
-                <p class="onlite-control__text">
+                <hr class="online-control__line">
+                <p class="online-control__text">
                     At each facility, a camera is installed that broadcasts the progress of work on the clock. 
                     At any time, you can go to our website and monitor the progress of work in your apartment. 
                     You can watch the live broadcast from one of our facilities!<br>
                     Leave a request below and you will receive a link to the broadcast.
                 </p>
-                <div class="user-form">
-                    <div class="user-form__item">
-                        <label class="user-form__label">Name</label>
-                        <input class="input" type="text" name="Name" placeholder="What is your name:">
+                <div class="online-control__user-form">
+                    <div class="user-form__item user-form__item_margin">
+                        <label class="user-form__label user-form__label_dark">Name</label>
+                        <input class="input input_black-color input_size-small" type="text" name="Name" placeholder="What is your name:">
                     </div>
-                    <div class="user-form__item">
-                        <label class="user-form__label">Phone</label>
-                        <input class="input" type="text" name="Phone" placeholder="Your phone number:">
+                    <div class="user-form__item user-form__item_margin">
+                        <label class="user-form__label user-form__label_dark">Phone</label>
+                        <input class="input input_black-color input_size-small" type="text" name="Phone" placeholder="Your phone number:">
                     </div>
                     <button class="button button-submit" type="submit">SUBMIT</button>
-                    <div class="user-form__agreement">
+                    <div class="user-form__agreement online-control__agreement">
                         <label class="label">
                             <input type="checkbox" class="checkbox">
                             <span class="fake"></span>
@@ -147,8 +147,8 @@
         </div>
         <div class="container">
             <div class="repair-types-section">
-                <h3 class="repair-types-section__title">TYPES OF REPAIR</h3>
-                <img class="repair-types-section__icon" src="./img/type_of_repair.svg">
+                <h3 class="section-title">TYPES OF REPAIR</h3>
+                <img class="section-icon" src="./img/type_of_repair.svg">
                 <div class="repair-types">
                     <div class="repair-types__item">
                         <img src="./img/redecorating_type.jpg">
@@ -221,7 +221,70 @@
                         the timing of your future repairs</p>
                     </div>
                 </div>
-                
+            </div>
+        </div>
+        <div class="reviews-section-background">
+            <div class="container">
+                <div class="reviews-section">
+                    <h3 class="section-title">our clients</h3>
+                    <img class="section-icon" src="./img/our_clients.svg">
+                    <div class="reviews-section__losung">
+                        80% of our customers recommend us to their <br>
+                        friends and family.
+                    </div>
+                    <div class="reviews">
+                        <div class="review-content">
+                            <div class="review-content__client">
+                                <img src="./img/client_fedosova_m_k.png">
+                                <span>Fedosova Maria Konstantinovna</span>
+                            </div>
+                            <p class="review-content__text">
+                                The repair process was turned out in terms, faster than anticipated. Team mobile and 
+                                professional. Works performed qualitatively without comments. Quality satisfied. 
+                                Prices democratic. I recommend these masters.
+                            </p>
+                            <p class="review-content__text">
+                                The repair process was turned out in terms, faster than anticipated. Team mobile and 
+                                professional. Works performed qualitatively without comments. Quality satisfied. 
+                                Prices democratic. I recommend these masters.
+                            </p>
+                        </div>
+                        <div class="review-content">
+                            <div class="review-content__client">
+                                <img src="./img/client_afanasyev_s_k.png">
+                                <span>Afanasyev Sergey Alexandrovich</span>
+                            </div>
+                            <p class="review-content__text">
+                                I want to thank the guys for their work. We put your shower part in repair. 
+                                I am very grateful that I referred to the repair as to my own. 
+                                Great thanks I express the project 
+                                to Georgia for its professionalism and approach
+                            </p>
+                            <p class="review-content__text">
+                                The repair process was turned out in terms, faster than anticipated. 
+                                Team mobile and professional. Works performed qualitatively without comments. 
+                                Quality satisfied. Prices democratic. I recommend these masters.
+                            </p>
+                        </div>
+                        <div class="review-content">
+                            <div class="review-content__client">
+                                <img src="./img/client_kiriev_E_l.png">
+                                <span>Kiriev Egor Leonidovich</span>
+                            </div>
+                            <p class="review-content__text">
+                                I want to thank the guys for their work. We put your shower part in repair. 
+                                I am very grateful that I referred to the repair as to my own. 
+                                Great thanks I express the project 
+                                to Georgia for its professionalism and approach
+                            </p>
+                            <p class="review-content__text">
+                                The repair process was turned out in terms, faster than anticipated. 
+                                Team mobile and professional. Works performed qualitatively without comments. 
+                                Quality satisfied. Prices democratic. I recommend these masters.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="about-us-section">
