chamges in rewiews and about us section

--- a/index.html
+++ b/index.html
@@ -236,23 +236,28 @@
                         <div class="review-content">
                             <div class="review-content__client">
                                 <img src="./img/client_fedosova_m_k.png">
-                                <span>Fedosova Maria Konstantinovna</span>
+                                <span class="client-name">Fedosova Maria<br>Konstantinovna</span>
                             </div>
                             <p class="review-content__text">
-                                The repair process was turned out in terms, faster than anticipated. Team mobile and 
-                                professional. Works performed qualitatively without comments. Quality satisfied. 
-                                Prices democratic. I recommend these masters.
+                                I want to thank the guys for their work. We put your shower part in repair. 
+                                I am very grateful that I referred to the repair as to my own. 
+                                Great thanks I express the project 
+                                to Georgia for its professionalism and approach
                             </p>
                             <p class="review-content__text">
                                 The repair process was turned out in terms, faster than anticipated. Team mobile and 
                                 professional. Works performed qualitatively without comments. Quality satisfied. 
                                 Prices democratic. I recommend these masters.
                             </p>
+                            <div class="review-content__label-group">
+                                <label class="label-group__item"><img img src="./img/square.svg">40 m2</label>
+                                <label class="label-group__item"><img img src="./img/calendar.svg">48 DAYS</label>
+                            </div>
                         </div>
                         <div class="review-content">
                             <div class="review-content__client">
                                 <img src="./img/client_afanasyev_s_k.png">
-                                <span>Afanasyev Sergey Alexandrovich</span>
+                                <span class="client-name">Afanasyev Sergey<br>Alexandrovich</span>
                             </div>
                             <p class="review-content__text">
                                 I want to thank the guys for their work. We put your shower part in repair. 
@@ -265,11 +270,15 @@
                                 Team mobile and professional. Works performed qualitatively without comments. 
                                 Quality satisfied. Prices democratic. I recommend these masters.
                             </p>
+                            <div class="review-content__label-group">
+                                <label class="label-group__item"><img img src="./img/square.svg">90 m2</label>
+                                <label class="label-group__item"><img img src="./img/calendar.svg">128 DAYS</label>
+                            </div>
                         </div>
                         <div class="review-content">
                             <div class="review-content__client">
                                 <img src="./img/client_kiriev_E_l.png">
-                                <span>Kiriev Egor Leonidovich</span>
+                                <span class="client-name">Kiriev Egor<br>Leonidovich</span>
                             </div>
                             <p class="review-content__text">
                                 I want to thank the guys for their work. We put your shower part in repair. 
@@ -282,14 +291,31 @@
                                 Team mobile and professional. Works performed qualitatively without comments. 
                                 Quality satisfied. Prices democratic. I recommend these masters.
                             </p>
+                            <div class="review-content__label-group">
+                                <label class="label-group__item"><img img src="./img/square.svg">56 m2</label>
+                                <label class="label-group__item"><img img src="./img/calendar.svg">86 DAYS</label>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="ask-question">
+                have any questions?
+            </div>
+        </div>
         <div class="about-us-section">
-            <div class="transparent-layer">
+            <div class="transparent-layer transparent-layer_gradient">
                 <div class="container">
+                    <div class="company-contacts">
+                        Rostov-on-Don, Nansen St., 239 Shopping Center<br>
+                        Decorum Tel +7 (928) 768 32 29
+                    </div>
+                    <div class="social-media">
+                        <button class="social-media-button" type="button"><img src="./img/email_icon.svg"></button>
+                        <button class="social-media-button" type="button"><img src="./img/insta_icon.svg"></button>
+                    </div>
                     <div class="about-us__map"></div>
                 </div>
             </div>
