--- a/index.html
+++ b/index.html
@@ -223,6 +223,38 @@
                 </div>
             </div>
         </div>
+        <div class="design-styles-background">
+            <div class="transparent-layer transparent-layer_gradient">
+                <div class="container">
+                    <div class="design-styles-section">
+                        <div class="design-styles-section__item">
+                            <h2 class="subtitle">We realize your<br>wildest fantasies</h2>
+                            <ul class="styles-list">
+                                <li class="styles-list__item">American classic</li>
+                                <li class="styles-list__item">Empire</li>
+                                <li class="styles-list__item">Classical</li>
+                                <li class="styles-list__item">Loft</li>
+                                <li class="styles-list__item">Minimalism</li>
+                                <li class="styles-list__item">Provence</li>
+                                <li class="styles-list__item">Romanticism</li>
+                                <li class="styles-list__item">Scandinavian style</li>
+                                <li class="styles-list__item">Mediterranean style</li>
+                                <li class="styles-list__item">High tech</li>
+                                <li class="styles-list__item">Eclecticism</li>
+                            </ul>
+                        </div>
+                        <div class="design-styles-section__item galery">
+                            <img class="galery__item" src="./img/amarican_design_ph1.jpg">
+                            <img class="galery__item" src="./img/amarican_design_ph2.jpg">
+                        </div>
+                        <div class="design-styles-section__item galery">
+                            <img class="galery__item" src="./img/amarican_design_ph3.jpg">
+                            <img class="galery__item" src="./img/amarican_design_ph4.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="reviews-section-background">
             <div class="container">
                 <div class="reviews-section">
@@ -300,14 +332,12 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="ask-question">
-                have any questions?
-            </div>
-        </div>
         <div class="about-us-section">
             <div class="transparent-layer transparent-layer_gradient">
                 <div class="container">
+                    <div class="ask-question">
+                        have any questions?
+                    </div>
                     <div class="company-contacts">
                         Rostov-on-Don, Nansen St., 239 Shopping Center<br>
                         Decorum Tel +7 (928) 768 32 29
