--- a/index.html
+++ b/index.html
@@ -221,6 +221,31 @@
                         the timing of your future repairs</p>
                     </div>
                 </div>
+                <div class="call-measurer-form">
+                    <div class="call-mesurer-form-wrapper">
+                        <h3 class="call-measurer-form__title">Leave a request for free<br>departure of the measurer</h3>
+                        <div class="user-form__item call-measurer-form-margin">
+                            <label class="user-form__label user-form__label_light">Name</label>
+                            <input class="input input_white-color input_size-medium" type="text" name="Name" placeholder="What is your name:">
+                        </div>
+                        <div class="user-form__item call-measurer-form-margin">
+                            <label class="user-form__label user-form__label_light">Phone</label>
+                            <input class="input input_white-color input_size-medium" type="text" name="Phone" placeholder="Your phone number:">
+                        </div>
+                        <div class="user-form__item">
+                            <label class="user-form__label user-form__label_light">Email</label>
+                            <input class="input input_white-color input_size-medium" type="email" name="Email" placeholder="Your email">
+                        </div>
+                        <div class="user-form__agreement call-mesurer-form__agreement">
+                            <label class="label">
+                                <input type="checkbox" class="checkbox">
+                                <span class="fake"></span>
+                                <span class="text">I agree to the processing of personal data.</span>
+                            </label>
+                        </div>
+                        <button class="button button-submit" type="submit">Call the measurer</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="design-styles-background">
@@ -228,7 +253,7 @@
                 <div class="container">
                     <div class="design-styles-section">
                         <div class="design-styles-section__item">
-                            <h2 class="subtitle">We realize your<br>wildest fantasies</h2>
+                            <h2 class="subtitle no-letter-spacing">We realize your<br>wildest fantasies</h2>
                             <ul class="styles-list">
                                 <li class="styles-list__item">American classic</li>
                                 <li class="styles-list__item">Empire</li>
