desktop varsion and WIP mobile

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="transparent-layer">
                 <div class="container">
                     <div class="home-section">
-                        <h1 class="title home-section__item">Turnkey Repair in the city of <span>Rostov-on-Don</span></h1>
+                        <h1 class="title home-section__item">Turnkey Repair in the city of <span class="yellow-text">Rostov-on-Don</span></h1>
                         <p class="losung home-section__item">
-                            Get ready-made turnkey repairs on time<br>
-                            with work time saving up to 45 days and 20% from<br>
+                            Get ready-made turnkey repairs on time
+                            with work time saving up to 45 days and 20% from
                             cost of materials due to the organization of work
                         </p>
                         <div class="home-section__item">
@@ -243,7 +243,7 @@
                                 <span class="text">I agree to the processing of personal data.</span>
                             </label>
                         </div>
-                        <button class="button button-submit" type="submit">Call the measurer</button>
+                        <button class="button button-submit call-mesurer-form__button" type="submit">Call the measurer</button>
                     </div>
                 </div>
             </div>
@@ -361,7 +361,31 @@
             <div class="transparent-layer transparent-layer_gradient">
                 <div class="container">
                     <div class="ask-question">
-                        have any questions?
+                        <div class="ask-question-form-wrapper">
+                            <h3 class="section-title ask-question-form__title">have any questions?</h3>
+                            <div class="user-form-item-wrapper">
+                                <div class="user-form__item">
+                                    <label class="user-form__label user-form__label_light">Name</label>
+                                    <input class="input input_white-color input_size-small" type="text" name="Name" placeholder="What is your name:">
+                                </div>
+                                <div class="user-form__item">
+                                    <label class="user-form__label user-form__label_light">Phone</label>
+                                    <input class="input input_white-color input_size-small" type="text" name="Phone" placeholder="Your phone number:">
+                                </div>
+                            </div>
+                            <div class="user-form__item">
+                                <label class="user-form__label user-form__label_light">Question</label>
+                                <input class="input input_white-color input_size-large" type="text" name="Question" placeholder="I want to know:">
+                            </div>
+                            <div class="user-form__agreement ask-question-form__agreement">
+                                <label class="label">
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="fake"></span>
+                                    <span class="text">I agree to the processing of personal data.</span>
+                                </label>
+                            </div>
+                            <button class="button button-submit ask-question__button" type="submit">Submit</button>
+                        </div>
                     </div>
                     <div class="company-contacts">
                         Rostov-on-Don, Nansen St., 239 Shopping Center<br>
