--- a/index.html
+++ b/index.html
@@ -247,6 +247,94 @@
                 </div>
             </div>
         </section>
+        <section class="our-advantages-section">
+            <div class="container">
+                <div class="our-advantages-wrapper">
+                    <div class="advantages-list">
+                        <div class="advantages-list-item">
+                            <div class="list-bullet">01</div>
+                            <p>Our specialist will arrive for measurements per day <br>
+                            contact, or appoint a date convenient for you</p>
+                        </div>
+                        <div class="advantages-list-item">
+                            <div class="list-bullet">02</div>
+                            <p>Free metering</p>
+                        </div>
+                        <div class="advantages-list-item">
+                            <div class="list-bullet">03</div>
+                            <p>Free consultation</p>
+                        </div>
+                        <div class="advantages-list-item">
+                            <div class="list-bullet">04</div>
+                            <p>Get a cost estimate and <br>
+                            the timing of your future repairs</p>
+                        </div>
+                    </div>
+                    <div class="call-measurer-form">
+                        <h4 class="title h4-sz text-white text-center">Leave a request for free<br>departure of the measurer</h4>
+                        <div class="form-item input-m">
+                            <label class="input-label label-white" for="name">Name</label>
+                            <input class="input input-white-txt" type="text" name="name" placeholder="What is your name:">
+                        </div>
+                        <div class="form-item input-m">
+                            <label class="input-label label-white" for="phone">Phone</label>
+                            <input class="input input-white-txt" type="text" name="phone" placeholder="Your phone number:">
+                        </div>
+                        <div class="form-item input-m">
+                            <label class="input-label label-white" for="phone">Email</label>
+                            <input class="input input-white-txt" type="email" name="email" placeholder="Your email:">
+                        </div>
+                        <label class="checkbox-label">
+                            <input type="checkbox" class="checkbox">
+                            <span class="checkbox-fake"></span>
+                            <span class="checkbox-text text-white">I agree to the processing of personal data</span>
+                        </label>
+                        <button class="btn btn-submit" type="submit">Call the measurer</button>
+                    </div>
+                </div>
+                <div class="content-to-right sale-mark">
+                    <div class="mark-icon">
+                        <img src="img/piggy-bank.svg" alt="">
+                    </div>
+                    <p class="text-yellow">Help save 10 - 20% of the<br>cost of materials</p>
+                </div>
+            </div>
+        </section>
+        <section class="design-styles">
+            <div class="transparent-layer">
+                <div class="container">
+                    <div class="design-styles-wrapper">
+                        <div class="col-5">
+                            <h2 class="title h2-sz text-yellow">We realize your wildest fantasies</h2>
+                            <ul class="styles-list">
+                                <li class="styles-list-item">American classic</li>
+                                <li class="styles-list-item">Empire</li>
+                                <li class="styles-list-item">Classical</li>
+                                <li class="styles-list-item">Loft</li>
+                                <li class="styles-list-item">Minimalism</li>
+                                <li class="styles-list-item">Provence</li>
+                                <li class="styles-list-item">Romanticism</li>
+                                <li class="styles-list-item">Scandinavian style</li>
+                                <li class="styles-list-item">Mediterranean style</li>
+                                <li class="styles-list-item">High tech</li>
+                                <li class="styles-list-item">Eclecticism</li>
+                            </ul>
+                        </div>
+                        <div class="col-2" style="display: flex;" >
+                            <div class="design-styles-section-item galery">
+                                <img class="galery-item" src="./img/amarican_design_ph1.jpg">
+                                <img class="galery-item" src="./img/amarican_design_ph2.jpg">
+                            </div>
+                            <div class="design-styles-section-item galery">
+                                <img class="galery-item" src="./img/amarican_design_ph3.jpg">
+                                <img class="galery-item" src="./img/amarican_design_ph4.jpg">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <section class="reviews-section">
             <div class="container">
                 <div class="reviews-section-wrapper">
